--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
         models/notecontroller.h models/notecontroller.cpp
         widgets/noteswidget.h widgets/noteswidget.cpp widgets/noteswidget.ui
+        crypt/passwordgenerator.h crypt/passwordgenerator.cpp
     )
 else()
     if(ANDROID)
