settings and icons

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Sql)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Sql Network)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql Network)
 
 # Manually specify the path to Crypto++ headers and libraries
 # Adjust these paths to where Crypto++ is installed on your system
@@ -19,7 +19,6 @@ set(CRYPTOPP_LIBRARIES "/usr/lib/libcryptopp.so")   # Adjust to the correct libr
 
 # Add Crypto++ headers to the include directories
 include_directories(${CRYPTOPP_INCLUDE_DIRS})
-
 set(PROJECT_SOURCES
     main.cpp
     common/mainwindow.cpp
@@ -43,6 +42,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         resources.qrc
         dialogs/loaderpasswords.h dialogs/loaderpasswords.cpp dialogs/loaderpasswords.ui
         common/consts.h
+        dialogs/settingsdialog.h dialogs/settingsdialog.cpp dialogs/settingsdialog.ui
+        icondownloader.h icondownloader.cpp
     )
 else()
     if(ANDROID)
@@ -57,10 +58,17 @@ else()
 endif()
 
 # Link Qt libraries
-target_link_libraries(PasswordManager PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Sql)
+target_link_libraries(PasswordManager PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Sql Qt${QT_VERSION_MAJOR}::Network)
 
 # Link Crypto++ library (shared .so)
 target_link_libraries(PasswordManager PRIVATE ${CRYPTOPP_LIBRARIES})
+
+
+include_directories(common)
+include_directories(dialogs)
+include_directories(widgets)
+include_directories(crypt)
+include_directories(models)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
@@ -75,14 +83,12 @@ set_target_properties(PasswordManager PROPERTIES
     MACOSX_BUNDLE TRUE
     WIN32_EXECUTABLE TRUE
 )
-
 include(GNUInstallDirs)
 install(TARGETS PasswordManager
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
-
 if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(PasswordManager)
 endif()
