--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,6 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         dialogs/authdialog.h dialogs/authdialog.cpp dialogs/authdialog.ui
         net/authmanager.h net/authmanager.cpp
         net/storagemanager.h net/storagemanager.cpp
-        qml/InfoNote.qml
     )
 
 else()
@@ -85,7 +84,7 @@ target_link_libraries(PasswordManager PRIVATE ${CRYPTOPP_LIBRARIES})
 qt_add_qml_module(PasswordManagerQML
     URI PasswordManager
     VERSION 1.0
-    QML_FILES qml/Main.qml qml/PMenubar.qml qml/PMenu.qml qml/Notes.qml qml/InfoNote.qml
+    QML_FILES qml/Main.qml qml/PMenubar.qml qml/PMenu.qml qml/Notes.qml qml/InfoNote.qml qml/NoteCreator.qml
 )
 
 include_directories(common)
