File structure update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Sql Network)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql Network LinguistTools)
-qt_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} translation.ts translation_ru.ts)
+qt_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} translations/translation.ts translations/translation_ru.ts)
 # configure_file(${QM_FILES} ${CMAKE_SOURCE_DIR} COPYONLY)
 
 # Manually specify the path to Crypto++ headers and libraries
