--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ set_source_files_properties(qml/AppSettings.qml PROPERTIES
 
 qt_add_qml_module(PasswordManagerQML
         URI PasswordManager
+        STATIC
         VERSION 1.0
         QML_FILES qml/Main.qml qml/PMenubar.qml qml/PMenu.qml qml/Notes.qml qml/InfoNote.qml qml/NoteCreator.qml qml/Welcome.qml qml/AppSettings.qml qml/PLoader.qml qml/SettingsDialog.qml qml/AuthDialog.qml
         qml/PLoaderStorage.qml
