Fixed combo box being based on current text

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         common/dotenv.h common/dotenv.cpp
         dialogs/manageaccountdialog.h dialogs/manageaccountdialog.cpp dialogs/manageaccountdialog.ui
         common/appcontrol.h common/appcontrol.cpp
+        common/settingsvalues.h
     )
 
 else()
